// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar Component > props.content works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`Avatar Component > props.default works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`Avatar Component > props.shape is equal to circle 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar Component > props.shape is equal to round 1`] = `
<div
  class="t-avatar t-avatar--round"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar Component > slots.content works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`Avatar Component > slots.default works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`AvatarGroup Component > props.cascading is equal to left-up 1`] = `
<div
  class="t-avatar-group t-avatar--offset-left"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup Component > props.cascading is equal to right-up 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup Component > props.collapseAvatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      <span
        class="custom-node"
      >
        TNode
      </span>
      
    </span>
  </div>
  
  
  
</div>
`;

exports[`AvatarGroup Component > slots.collapse-avatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
  v-slots="[object Object]"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
  
</div>
`;

exports[`AvatarGroup Component > slots.collapseAvatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
  v-slots="[object Object]"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
  
</div>
`;

exports[`avatar Component > props.content works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`avatar Component > props.default works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`avatar Component > props.shape is equal to circle 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`avatar Component > props.shape is equal to round 1`] = `
<div
  class="t-avatar t-avatar--round"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`avatar Component > slots.content works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`avatar Component > slots.default works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`avatarGroup Component > props.cascading is equal to left-up 1`] = `
<div
  class="t-avatar-group t-avatar--offset-left"
>
  
  <!---->
  
</div>
`;

exports[`avatarGroup Component > props.cascading is equal to right-up 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  <!---->
  
</div>
`;

exports[`avatarGroup Component > props.collapseAvatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      <span
        class="custom-node"
      >
        TNode
      </span>
      
    </span>
  </div>
  
  
  
</div>
`;

exports[`avatarGroup Component > slots.collapse-avatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
  v-slots="[object Object]"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
  
</div>
`;

exports[`avatarGroup Component > slots.collapseAvatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
  v-slots="[object Object]"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
  
</div>
`;
